# jwsmtp

./: CMakeLists.txt
jwsmtp/jwsmtp/: mailer.cpp
